--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: csharp
 mono: none
 dotnet: 2.1.300
+script:
+  - chmod +x ./scripts/project-tasks.sh
+  - ./scripts/project-tasks.sh build-ci
+sudo: required
