--- a/src/Envoice.MongoIdentityServer/Envoice.MongoIdentityServer.csproj
+++ b/src/Envoice.MongoIdentityServer/Envoice.MongoIdentityServer.csproj
@@ -1,7 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <Authors>Christopher Town</Authors>
+        <Company>Envoice</Company>
+        <Copyright>MIT</Copyright>
+        <Description>Mongo backing store for Identity Server 4</Description>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <IncludeSource>true</IncludeSource>
+        <IncludeSymbols>true</IncludeSymbols>
+        <PackageId>Envoice.MongoIdentityServer</PackageId>
+        <PackageTags>dotnetcore, mongodb, identity, idsrv4</PackageTags>
+        <ProjectUrl>https://github.com/christophla/Envoice.MongoIdentityServer</ProjectUrl>
+        <RepositoryUrl>https://github.com/christophla/Envoice.MongoIdentityServer</RepositoryUrl>
+        <VersionPrefix>1.0.0</VersionPrefix>
+        <VersionSuffix>$(VersionSuffix)</VersionSuffix>
     </PropertyGroup>
 
     <ItemGroup>
